# drop_down_terminal_plasmoid

./: CMakeLists.txt  LICENSE  Messages.sh  README.md  drop_down_terminal_plasmoid.kdev4
src/: CMakeLists.txt  drop_down_terminal_plasmoid.cpp  drop_down_terminal_plasmoid.h
src/package/: metadata.json
